' Generated by UML Generator
' Encoded: jLXHSzie47xths3wPBVoDTV7p5scITDqF6DdF9PxxmIHX3663a9DUxtsjvT5GW81JgwfNpBMyktoiVkjjEHjhR7IpPvFwXqJdx32UqGuhkjphHMxQJHT42bAzYz59vDxLb54c2ASJYOMXIwatA5l4uJcY_BY-XILnalSmRDccbFVW1ijbM_Ouo-bbcHtYfZG5a5qWtbeOtjyHzTOt_kUS_Fd5MmzzNSjKB1dWO8T2nJiPrP7knKesclsE_P9HrsKbzSBSQuK_ZgTdQ8RAJd50bPMdVi_cBCAQoR52B2KM5XInlnPiWfi6weR5LalAQUQEgiNeiIVwHZyWMeu9PZwJ8Dn2uUDhETmviZgkCD2Mq2B7J8TBYnSQi90PST4z1aRM9QEK6QnvPLPxEdbd3sY6SX0EGLOcsSDYRt46lV9_UvtovBL-efnkiB2H59jytmpRQWP-GurieXJPAK1F_y2hpFqDnBqmREUJMT9JuZjgyqulgWLUGts-hL3_Q6_w1UkbNuaUDdeh_heHdELG_cYwG5EKIF0m6-DoGxV6K9MTqe-UEa3KngyaGys8l1kSO5IUeSLrkIUrY2RXUWz5fMtYIV_tcr3zxBhX2VXIueLkRTuLiK7683dbKtNLiRiGqb0Cn-M1EyGlYJ0wt59S2zsNX8E5KeYmIiX2OVAIY81I5GPK2D9WEcm981tYqjBegsj3Us_lGzMDeNkc0Ir1PlkYXlm28lxiQRgS76R3k4N5xmUBsxZnSuNrw72uYPu9OhhKDdY9W29UW5gL5mm7Iuky6vn1_jzyz6rksh4atgzPVCek9L30jnH3zG0DgU6W7ZSwkbPoTi27krCjknaHJ0t7nCAzbicC4_OHRE_CPKm2vVuQzsFJWCLU1hUGLqekfADq6kgZ9FrCShvy-Jaf1-mecOea4UqG8bj2vJYNg0Kyzalxc7zkk6eRU-mXhavPjE8o7OTX0-7azAT1CXEPs7E0N3b3fK4kBUVtprBnnYe-waO-kSTvgJXncQYqody60u-7kmIXxS32DYtZEoeZaUGhS7MhGhjpr7VbrHKxvMIQaNhshmNfbIvdubn9t1p7Xbupw3KJKMDsYm7xbVM2h2NNuUR1dguPQhMrtZlJTycwCXoPzXGRo0dM57_kNrZUyFuiRQQ3MDnGcEsLj2UwM5nIx5vnNKVZ4zAtfgycii0vk-2FM2LLWsnDmNVE4xjco6rNUWZfxP04Qy2vGyoEowp_yybMpYpi8vSetVBUxTXTBb9E1-W4bm_Xg3HUSRNa9Ioy4sjbRduec4-QVKr-W956RU2mh4jp3fOIAHENnEz1CUVrcErzb7siP7Dx96xei_jN9Awt7-mSRDNUoCRzr8F56EDp5uf4kLklmRsfF4rtvczQtvMrOPsj3NOmX78YtJbSXcv3Il2IspelSGPvtuXxzicClBip67vGizKkvQzcUIQxmbD_upMFlY-U6RJf_xh8EVpTXPCtJzXqTvwKlSNMBGpfHrdNqPFDghxni_d_vsrw-vhDbZUcXerU_uJ
' URL: http://www.plantuml.com/plantuml/uml/jLXHSzie47xths3wPBVoDTV7p5scITDqF6DdF9PxxmIHX3663a9DUxtsjvT5GW81JgwfNpBMyktoiVkjjEHjhR7IpPvFwXqJdx32UqGuhkjphHMxQJHT42bAzYz59vDxLb54c2ASJYOMXIwatA5l4uJcY_BY-XILnalSmRDccbFVW1ijbM_Ouo-bbcHtYfZG5a5qWtbeOtjyHzTOt_kUS_Fd5MmzzNSjKB1dWO8T2nJiPrP7knKesclsE_P9HrsKbzSBSQuK_ZgTdQ8RAJd50bPMdVi_cBCAQoR52B2KM5XInlnPiWfi6weR5LalAQUQEgiNeiIVwHZyWMeu9PZwJ8Dn2uUDhETmviZgkCD2Mq2B7J8TBYnSQi90PST4z1aRM9QEK6QnvPLPxEdbd3sY6SX0EGLOcsSDYRt46lV9_UvtovBL-efnkiB2H59jytmpRQWP-GurieXJPAK1F_y2hpFqDnBqmREUJMT9JuZjgyqulgWLUGts-hL3_Q6_w1UkbNuaUDdeh_heHdELG_cYwG5EKIF0m6-DoGxV6K9MTqe-UEa3KngyaGys8l1kSO5IUeSLrkIUrY2RXUWz5fMtYIV_tcr3zxBhX2VXIueLkRTuLiK7683dbKtNLiRiGqb0Cn-M1EyGlYJ0wt59S2zsNX8E5KeYmIiX2OVAIY81I5GPK2D9WEcm981tYqjBegsj3Us_lGzMDeNkc0Ir1PlkYXlm28lxiQRgS76R3k4N5xmUBsxZnSuNrw72uYPu9OhhKDdY9W29UW5gL5mm7Iuky6vn1_jzyz6rksh4atgzPVCek9L30jnH3zG0DgU6W7ZSwkbPoTi27krCjknaHJ0t7nCAzbicC4_OHRE_CPKm2vVuQzsFJWCLU1hUGLqekfADq6kgZ9FrCShvy-Jaf1-mecOea4UqG8bj2vJYNg0Kyzalxc7zkk6eRU-mXhavPjE8o7OTX0-7azAT1CXEPs7E0N3b3fK4kBUVtprBnnYe-waO-kSTvgJXncQYqody60u-7kmIXxS32DYtZEoeZaUGhS7MhGhjpr7VbrHKxvMIQaNhshmNfbIvdubn9t1p7Xbupw3KJKMDsYm7xbVM2h2NNuUR1dguPQhMrtZlJTycwCXoPzXGRo0dM57_kNrZUyFuiRQQ3MDnGcEsLj2UwM5nIx5vnNKVZ4zAtfgycii0vk-2FM2LLWsnDmNVE4xjco6rNUWZfxP04Qy2vGyoEowp_yybMpYpi8vSetVBUxTXTBb9E1-W4bm_Xg3HUSRNa9Ioy4sjbRduec4-QVKr-W956RU2mh4jp3fOIAHENnEz1CUVrcErzb7siP7Dx96xei_jN9Awt7-mSRDNUoCRzr8F56EDp5uf4kLklmRsfF4rtvczQtvMrOPsj3NOmX78YtJbSXcv3Il2IspelSGPvtuXxzicClBip67vGizKkvQzcUIQxmbD_upMFlY-U6RJf_xh8EVpTXPCtJzXqTvwKlSNMBGpfHrdNqPFDghxni_d_vsrw-vhDbZUcXerU_uJ
' Generated on: 2025-11-10T22:12:16.175091800

@startuml
skinparam classAttributeIconSize 0
hide circle

class Book {
  -ISBN: String
  -title: String
  -autor: String
  -maxStock: int
  -actualStock: int
  -imagePath: String
  --
  +Book(ISBN: String, title: String, autor: String, maxStock: int, actualStock: int, imagePath: String)
  +Book(ISBN: String, title: String, autor: String, maxStock: int, imagePath: String)
  +ISDNInArray(): boolean
  +MaxStockValidation(): boolean
  +LoanBook(): void
  +ReturnBook(): void
  +DeleteBook(): boolean
  +SaveBook(): void
  +GetISBN(): String
  +GetTitle(): String
  +GetAutor(): String
  +GetMaxStock(): int
  +GetActualStock(): int
  +GetImagePath(): String
  +SetISBN(n: String): void
  +SetTitle(n: String): void
  +SetAutor(n: String): void
  +SetMaxStock(n: String): void
  +SetActualStock(n: String): void
  +SetImagePath(n: String): void
  +PrintBookData(): void
}

class BookListFileManager {
  -{static} bookList: ArrayList<Book> = new ArrayList<>()
  -{static} bookListFilePath: String = "src/Files/bookList.txt"
  --
  ~BookListFileManager()
  +{static} LoadBookList(): void
  +{static} SaveBookList(): void
  -{static} PackagingBook(row: String): Book
  -{static} PackagingRowList(book: Book): String
  +{static} MatchesISBNInList(bookId: String): boolean
  +{static} RemoveBook(bookId: String): boolean
  +{static} SearchBook(id: String): Book
  +{static} AddBookToList(book: Book): void
}

class LoanListFileManager {
  -{static} loanList: ArrayList<Loan> = new ArrayList<>()
  -{static} loanListFilePath: String = "src/Files/loanList.txt"
  --
  ~LoanListFileManager()
  +{static} LoadLoanList(): void
  +{static} SaveLoanList(): void
  -{static} PackagingLoan(row: String): Loan
  -{static} PackagingRowList(loan: Loan): String
  +{static} RemoveLoan(ISBN: String): boolean
  +{static} SearchLoan(ISBN: String): Loan
  +{static} AddLoantToList(loan: Loan): void
}

class UserListFileManager {
  -{static} userList: ArrayList<User> = new ArrayList<>()
  -{static} userListFilePath: String = "src/Files/userList.txt"
  --
  ~UserListFileManager()
  +{static} LoadUserList(): void
  +{static} SaveUserList(): void
  -{static} PackagingUser(row: String): User
  -{static} PackagingRowList(user: User): String
  +{static} MatchesRUNInList(run: String): boolean
  +{static} RemoveUser(run: String): boolean
  +{static} SearchUser(run: String): User
  +{static} AddUsertToList(user: User): void
}

class Loan {
  -ISBN: String
  -run: String
  -startLoan: LocalDate
  -finalLoan: LocalDate
  -numberLoanDays: int
  -user: User
  -book: Book
  -fineMountPerDay: int = 1000
  --
  +Loan(ISBN: String, run: String, numberLoanDays: int, startLoan: LocalDate, finalLoan: LocalDate)
  +Loan(ISBN: String, run: String, numberLoanDays: int)
  +ValidateLoan(): boolean
  +GetISBN(): String
  +GetRun(): String
  +GetNumberLoanDays(): int
  +GetStartLoanDate(): LocalDate
  +GetFinalLoanDate(): LocalDate
  +SaveLoan(): void
  +LateLoan(date: LocalDate): void
  -CalculateFine(lateDays: int): void
  +DeleteLoan(): boolean
  +PrintLoanTicket(): void
}

class Tools {
  -Tools()
  +{static} SendErrorMessage(errMessage: String): void
  +{static} SendMessage(Message: String): void
}

class Student {
  -loanDays: int = 10
  --
  +Student(run: String, firstName: String, lastName: String, gender: String, career: String, loan: String)
  +Student(run: String, firstName: String, lastName: String, gender: String, career: String)
  +GetMaxLoanDays(): int
  +PrintUserData(): void
}

class Teacher {
  -professionalCareer: String
  -education: String
  -loanDays: int = 20
  --
  +Teacher(run: String, firstName: String, lastName: String, gender: String, career: String, loan: String, education: String, professionalCareer: String)
  +Teacher(run: String, firstName: String, lastName: String, gender: String, career: String, education: String, professionalCareer: String)
  +GetMaxLoanDays(): int
  +GetProfessionalCareer(): String
  +GetEducation(): String
  +SetProfessionalCareer(professionalCareer: String): void
  +SetEducation(education: String): void
  +PrintUserData(): void
}

abstract class User {
  -run: String
  -firstName: String
  -lastName: String
  -gender: String
  -career: String
  -loan: String
  --
  +User(run: String, firstName: String, lastName: String, gender: String, career: String, loan: String)
  +User(run: String, firstName: String, lastName: String, gender: String, career: String)
  +RUNValidation(): boolean
  -RUNInArray(): boolean
  +GenderValidation(): boolean
  +GetLoan(): String
  +SetLoan(idBook: String): void
  +DeleteUser(): boolean
  +SaveUser(): void
  +GetMaxLoanDays(): int
  +GetRUN(): String
  +SetRUN(run: String): void
  +GetFirstName(): String
  +SetFirstName(name: String): void
  +GetLastName(): String
  +SetLastName(name: String): void
  +GetGender(): String
  +SetGender(gender: String): void
  +GetCareer(): String
  +SetCareer(career: String): void
  +GetProfessionalCareer(): String
  +SetProfessionalCareer(professionalCareer: String): void
  +GetEducation(): String
  +SetEducation(education: String): void
  +PrintUserData(): void
}

BookListFileManager o-- Book
LoanListFileManager o-- Loan
UserListFileManager o-- User
Loan *-- User
Loan *-- Book
Student --|> User
Teacher --|> User
@enduml